// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Blog/> Snapshot renders without crashing using mount 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c1 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c0 > :last-child {
  margin-top: 1.5em;
  height: 200px;
  width: 200px;
}

<Blog>
  <styled.div>
    <div
      className="c0"
    >
      <h1>
        COMING SOON...
      </h1>
      <UIButton
        label="Go Back"
      >
        <styled.button
          onClick={[Function]}
          secondary={false}
        >
          <button
            className="c1"
            onClick={[Function]}
          >
            <span>
              Go Back
            </span>
          </button>
        </styled.button>
      </UIButton>
      <FcClock
        size="46"
      >
        <IconBase
          attr={
            Object {
              "enableBackground": "new 0 0 48 48",
              "version": "1",
              "viewBox": "0 0 48 48",
            }
          }
          size="46"
        >
          <svg
            enableBackground="new 0 0 48 48"
            fill="currentColor"
            height="46"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            version="1"
            viewBox="0 0 48 48"
            width="46"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="24"
              cy="24"
              fill="#00ACC1"
              key="0"
              r="20"
            />
            <circle
              cx="24"
              cy="24"
              fill="#eee"
              key="1"
              r="16"
            />
            <rect
              height="13"
              key="2"
              width="2"
              x="23"
              y="11"
            />
            <rect
              height="9.2"
              key="3"
              transform="matrix(-.707 .707 -.707 -.707 65.787 27.25)"
              width="2.3"
              x="26.1"
              y="22.7"
            />
            <circle
              cx="24"
              cy="24"
              key="4"
              r="2"
            />
            <circle
              cx="24"
              cy="24"
              fill="#00ACC1"
              key="5"
              r="1"
            />
          </svg>
        </IconBase>
      </FcClock>
    </div>
  </styled.div>
</Blog>
`;

exports[`<Blog/> Snapshot renders without crashing using render 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c1 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c0 > :last-child {
  margin-top: 1.5em;
  height: 200px;
  width: 200px;
}

<div
  class="c0"
>
  <h1>
    COMING SOON...
  </h1>
  <button
    class="c1"
  >
    <span>
      Go Back
    </span>
  </button>
  <svg
    enable-background="new 0 0 48 48"
    fill="currentColor"
    height="46"
    stroke="currentColor"
    stroke-width="0"
    version="1"
    viewBox="0 0 48 48"
    width="46"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="24"
      cy="24"
      fill="#00ACC1"
      r="20"
    />
    <circle
      cx="24"
      cy="24"
      fill="#eee"
      r="16"
    />
    <rect
      height="13"
      width="2"
      x="23"
      y="11"
    />
    <rect
      height="9.2"
      transform="matrix(-.707 .707 -.707 -.707 65.787 27.25)"
      width="2.3"
      x="26.1"
      y="22.7"
    />
    <circle
      cx="24"
      cy="24"
      r="2"
    />
    <circle
      cx="24"
      cy="24"
      fill="#00ACC1"
      r="1"
    />
  </svg>
</div>
`;

exports[`<Blog/> Snapshot renders without crashing using shallow 1`] = `
<styled.div>
  <h1>
    COMING SOON...
  </h1>
  <UIButton
    label="Go Back"
  />
  <FcClock
    size="46"
  />
</styled.div>
`;
